fix swaggo & add login error message
